Pre-release code cleanup